--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link res="stylesheet" herf="style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Momentum App</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <form id="login-form" class="hidden">
+        <input required maxlength="15" type="text" placeholder="What is your name?" />
+        <button>Log In</button>
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
+    <h2 id="clock"></h1>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 </html>
