--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter">
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
         <span></span>
+        <span></span>
+    </div>
+    <div id="weather">
+        <sapn></sapn>
         <span></span>
     </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
