[Mometum App] 오타 수정

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span></span>
     </div>
     <div id="weather">
-        <sapn></sapn>
+        <span></span>
         <span></span>
     </div>
     <script src="js/greetings.js"></script>
