--- a/Momentum App/index.html
+++ b/Momentum App/index.html
@@ -12,16 +12,19 @@
         <button>Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <h2 id="clock"></h1>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+    <div class="today">
+        <div id="date" class="date"></div>
+        <div id="clock" class="clock"></div>
+    </div>
     <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter">
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
-        <span></span>
-        <span></span>
-    </div>
-    <div id="weather">
         <span></span>
         <span></span>
     </div>
