[momentum app] 이름 삭제 기능 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div id="weather" class="js-weather weather">
             <span></span>
         </div>
-        <h1 id="greeting" class="hidden js-name name"></h1>
+        <div id="user-info">
+            <h1 id="greeting" class="hidden js-name name"></h1>
+        </div>
         <form id="login-form" class="hidden js-name name">
             <input required maxlength="15" type="text" placeholder="your name" />
         </form>
