[momentum app] 이름 삭제 기능 수정

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div id="user-info">
             <h1 id="greeting" class="hidden js-name name"></h1>
+            <span id="del-button-span"></span>
         </div>
         <form id="login-form" class="hidden js-name name">
             <input required maxlength="15" type="text" placeholder="your name" />
