[momentum app] css 수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="weather" class="js-weather weather">
             <span></span>
         </div>
-        <div id="user-info">
+        <div class="user-info" id="user-info">
             <h1 id="greeting" class="hidden js-name name"></h1>
             <span id="del-button-span"></span>
         </div>
